# snipdrop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/workflows/: release.yml
design/installer/: build-previews.mjs
design/logos-v3/: package-lock.json  package.json  render.mjs
src/: i18n.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
